@@ -1,4 +1,5 @@
 version 0.9-3
+- old.correctSigns now removed
 - added index.html for vignettes
 
 version 0.9-2
